--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "eliza",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
-        "build": "turbo run build --filter=!eliza-docs",
+        "build": "turbo run build --filter=!eliza-docs --filter=!@elizaos/plugin-story",
         "build-docker": "turbo run build",
         "start": "pnpm --filter \"@elizaos/agent\" start --isRoot",
         "start:client": "pnpm --dir client dev",
