--- a/packages/client-lens/package.json
+++ b/packages/client-lens/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "@elizaos/client-lens",
-  "version": "0.1.7-alpha.1",
-  "main": "dist/index.js",
-  "type": "module",
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "@elizaos/core": "workspace:*",
-    "@lens-protocol/client": "2.2.0",
-    "@lens-protocol/metadata": "1.2.0",
-    "axios": "^1.7.9",
-    "viem": "^2.13.8"
-  },
-  "devDependencies": {
-    "tsup": "^8.3.5"
-  },
-  "peerDependencies": {
-    "@elizaos/core": "workspace:*"
-  },
-  "scripts": {
-    "build": "tsup --format esm --dts",
-    "dev": "tsup --format esm --dts --watch"
-  }
+    "name": "@elizaos/client-lens",
+    "version": "0.1.7-alpha.1",
+    "main": "dist/index.js",
+    "type": "module",
+    "types": "dist/index.d.ts",
+    "dependencies": {
+        "@elizaos/core": "workspace:*",
+        "@lens-protocol/client": "0.0.0-canary-20241219204221",
+        "@lens-protocol/metadata": "2.0.0-next.2",
+        "@lens-protocol/storage-node-client": "^0.0.2",
+        "axios": "^1.7.9",
+        "viem": "^2.21.57"
+    },
+    "devDependencies": {
+        "tsup": "^8.3.5"
+    },
+    "peerDependencies": {
+        "@elizaos/core": "workspace:*"
+    },
+    "scripts": {
+        "build": "tsup --format esm --dts",
+        "dev": "tsup --format esm --dts --watch"
+    }
 }
