--- a/packages/client-lens/package.json
+++ b/packages/client-lens/package.json
@@ -6,7 +6,8 @@
     "types": "dist/index.d.ts",
     "dependencies": {
         "@elizaos/core": "workspace:*",
-        "@lens-protocol/client": "0.0.0-canary-20241219204221",
+        "@lens-network/sdk": "0.0.0-canary-20241203140504",
+        "@lens-protocol/client": "0.0.0-canary-20241224162155",
         "@lens-protocol/metadata": "2.0.0-next.2",
         "@lens-protocol/storage-node-client": "^0.0.2",
         "axios": "^1.7.9",
