feat: lensV3--> removed unused imports

--- a/.env.example
+++ b/.env.example
@@ -161,6 +161,13 @@ USE_GAIANET_EMBEDDING=          # Set to TRUE for GAIANET/768, leave blank for l
 EVM_PRIVATE_KEY=
 EVM_PROVIDER_URL=
 
+# Lens
+LENS_SMART_ACCOUT_ADDRESS= #value of account.address not the MM address or ownedBy address
+LENS_APP=0xe5439696f4057aF073c0FB2dc6e5e755392922e1 #Lens testnet app address. subject to change
+LENS_DRY_RUN=false
+STORJ_API_USERNAME=
+STORJ_API_PASSWORD=
+
 # Solana
 SOLANA_PRIVATE_KEY=
 SOLANA_PUBLIC_KEY=
