--- a/packages/plugin-evm/package.json
+++ b/packages/plugin-evm/package.json
@@ -10,7 +10,7 @@
     "@lifi/sdk": "3.4.1",
     "@lifi/types": "16.3.0",
     "tsup": "8.3.5",
-    "viem": "2.21.53"
+    "viem": "^2.21.57"
   },
   "scripts": {
     "build": "tsup --format esm --dts",
