feat: using lens storage node I-1

--- a/.env.example
+++ b/.env.example
@@ -165,9 +165,13 @@ EVM_PROVIDER_URL=
 LENS_SMART_ACCOUNT_ADDRESS= #value of account.address not the MM address or ownedBy address
 LENS_APP=0xe5439696f4057aF073c0FB2dc6e5e755392922e1 #Lens testnet app address. subject to change
 LENS_DRY_RUN=false
+LENS_POLL_INTERVAL=120
 STORJ_API_USERNAME=
 STORJ_API_PASSWORD=
+LENS_STORAGE_PROVIDER=          # Storage provider for media: 'arweave', 'pinata', or 'storj'. Default "storj"
 
+# Arweave Storage Configuration
+ARWEAVE_JWK=                    # Arweave wallet JSON Web Key (JWK) for permanent storage
 # Solana
 SOLANA_PRIVATE_KEY=
 SOLANA_PUBLIC_KEY=
@@ -342,3 +346,4 @@ STORY_PRIVATE_KEY= # Story private key
 STORY_API_BASE_URL= # Story API base URL
 STORY_API_KEY= # Story API key
 PINATA_JWT= # Pinata JWT for uploading files to IPFS
+PINATA_GATEWAY_URL= # Pinata Gateway URL. Recommended for more consistent indexing with Lens.
