--- a/packages/client-lens/package.json
+++ b/packages/client-lens/package.json
@@ -7,11 +7,12 @@
     "dependencies": {
         "@elizaos/core": "workspace:*",
         "@lens-network/sdk": "0.0.0-canary-20241203140504",
-        "@lens-protocol/client": "0.0.0-canary-20241226080441",
+        "@lens-protocol/client": "0.0.0-canary-20241227112802",
         "@lens-protocol/metadata": "2.0.0-next.2",
         "@lens-protocol/storage-node-client": "^0.0.2",
         "axios": "^1.7.9",
-        "viem": "^2.21.57"
+        "viem": "^2.21.57",
+        "arweave": "1.15.5"
     },
     "devDependencies": {
         "tsup": "^8.3.5"
