--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "eliza",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
+        "postinstall": "node patch-lens-protocol-client.js && pnpm build --force",
         "build": "turbo run build --filter=!eliza-docs",
         "build-docker": "turbo run build",
         "start": "pnpm --filter \"@elizaos/agent\" start --isRoot",
